running-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: running-clusterip-service
  labels:
    app: running
spec:
  type: ClusterIP
  selector:
    app: running
  ports:
    - port: 80
      targetPort: 80
