space-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: space-clusterip-service
  labels:
    app: space
spec:
  type: ClusterIP
  selector:
    app: space
  ports:
    - port: 80
      targetPort: 80
