yoga-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yoga-clusterip-service
  labels:
    app: yoga
spec:
  type: ClusterIP
  selector:
    app: yoga
  ports:
    - port: 80
      targetPort: 80
